--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div id='goalsBlock' onclick='showContent("goals")'>
 		<h2>Куда я иду</h2>
 		<h3>И причём тут бабочка</h3>
-		<img src='images/goals.jpg' >
+		<img src='images/goals.JPG' >
 	</div>
 
 	<div id='nutritionBlock'>
