--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
 
 <header>
-<!--<img src='images/me.jpg'>-->
-	<h1>Mary Bage</h1>
+
+<img src='images/me1.jpg'>
+	<h1>Mary Baghdasaryan</h1>
 	
 	
 </header>
@@ -30,21 +31,21 @@
 <div id='blocks'>
 
 	<div id='storyBlock' onclick='showContent("story")'>
-			<h2>Моя история</h2>
-			<h3>Или что сделало меня мной</h3>
+			<h1>Моя история</h1>
+			<h2>Или что сделало меня мной</h2>
 			<img src='images/story.jpg' >
 	</div>
 
 	<div id='goalsBlock' onclick='showContent("goals")'>
-		<h2>Куда я иду</h2>
-		<h3>И причём тут бабочка</h3>
-		<img src='images/goals.JPG' >
+		<h1>Куда я иду</h1>
+		<h2>И причём тут бабочка</h2>
+		<img src='images/goals.jpg' >
 	</div>
 
 	<div id='nutritionBlock'>
-		<h2>Что я ем</h2>  
-		<h3>И почему это важно</h3> 
-		<img src='images/nutrition.png' onclick='showContent("nutrition")'>
+		<h1>Что я ем</h1>  
+		<h2>И почему это важно</h2> 
+		<img src='images/nutrition2.jpg' onclick='showContent("nutrition")'>
 	</div>
 
 </div>
@@ -78,10 +79,10 @@
 	<div id='goalsContent' class='Content'>
 
 		<p>	
-			Вопреки бытующей в армянском обществе негативной ассоциации с бабочкой она символ <b>Трансформации</b>. Причём трансформации грандиозной.
-			Как неприглядное, умеющее только ползать, существо обретает сказочно красивые крылья и способность летать. 
-			Ведь гусеница даже не представляет, кем ей суждено стать. И в этом кроется вся магия бабочки.<br/>
-			В нас в людях тоже заложен огромный потенциал, который каждый должен в себе раскрыть. 
+			Вопреки негативной ассоциации, которая бытует в армянском обществе, бабочка символ <b>Трансформации</b>. Причём трансформации грандиозной.
+			Как неприглядное, умеющее только ползать, существо благодаря своей природной магии обретает сказочно красивые крылья и способность летать. 
+			Ведь гусеница даже не представляет, кем ей суждено стать. И в этом кроется вся уникальность бабочки.<br/>
+			В нас, в людях, тоже заложен огромный потенциал, который каждый должен в себе раскрыть. 
 			А сделать это можно только следуя своей природе, прислушиваясь к себе, бросая себе вызов, преодлевая трудности и развиваясь. 
 			И лишь тогда вырастут крылья.<br/>
 			Для меня нет ничего более увлекательного, чем учиться чему-то новому, познавать мир и себя. 
