--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 
 <header>
 
-<img src='images/me1.jpg'>
-	<h1>Mary Baghdasaryan</h1>
-	
-	
+		<img src='images/me1.jpg'>
+		<h1>Mary Baghdasaryan</h1>
+
 </header>
 
 
@@ -32,7 +31,7 @@
 
 	<div id='storyBlock' onclick='showContent("story")'>
 			<h1>Моя история</h1>
-			<h2>Или что сделало меня мной</h2>
+			<h2>Или почему этот сайт на русском</h2>
 			<img src='images/story.jpg' >
 	</div>
 
@@ -54,20 +53,17 @@
 	<div id='storyContent' class='Content'>
 
 		<p>
-			<span class='arm'>Ես ծնվել և մինչև 11 տարեկան ապրել եմ Երևանում։ Հետո իմ ընտանիքը տեղափողվել է Մոսկվա։</span>
-			И в один миг изменилось всё. Среда, окружение, язык, на котором нужно было говорить и желательно ещё и думать. 
-			Я окончила школу, затем институт. Получила диплом экономиста и устроилась на работу.  Вот тут-то всё и началось. 
-			Если школа и институт были явлениями временными с точными сроками окончания, то работа это уже совсем другая история. 
-			За 3 года я 3 раза поменяла работу. <br>
-			1. В Смарт Про я работала менеджером по заказам. <br>
-			2. В <a href='https://ameria.ru/' target='blank'>Америа Русс</a> работала аналитиком, 
-			где научилась программе Excel, в том числе писать макросы, и полюбила программирование.<br>
-			3. В <a href='https://svyaz.transneft.ru/' target='blank'>Связьтранснефти</a> работала в ИТ департаменте и занималась бюджетированием. 
-			Параллельно начала изучать web программирование и как создавать сайты с помощью CMS.<br>
-			За 3 года рабочий ритм города, масштабы, пробки и вся эта угнетающая суета настолько давили на меня, что я вернулась в Ереван.
-			<span class='arm'>Ընդունվել եմ աշխատանքի <a href='https://www.ardshinbank.am/' target='blank'><img src="images/logo.png" style='height:37px; margin-bottom: -15px'><a> 
-			սկզբում քարտային բաժին, հետո տեղափոխվել եմ HR, այնուհետև IT, որտեղ զբաղվում էի ներքին քարտային ծրագրի զարգացմամբ և սպասարկմամբ։ 5 տարի հետո տեղափոխվել եմ 		
-			<a href='https://www.ucom.am/' target='blank'><img src="images/ucom.png" style='height:65px; margin-bottom: -25px'><a>
+			&nbsp;&nbsp;&nbsp;<span class='arm'>Ես ծնվել և մինչև 11 տարեկան ապրել եմ Երևանում։ Հետո իմ ընտանիքը տեղափողվել է <b>Մոսկվա</b>։</span> 
+			<br>&nbsp;&nbsp;&nbsp;Также резко и неожиданно, как язык и шрифт в этом тексте, в моей жизни изменилось всё. Среда, окружение, язык, на котором нужно было говорить и желательно ещё и думать. 
+			<br>&nbsp;&nbsp;&nbsp;Я окончила там общеобразовательную школу, затем институт <a href='https://mephi.ru/' target='blank'>НИЯУ МИФИ</a>. Получила <b>диплом экономиста</b> и устроилась на работу.
+			<br>&nbsp;&nbsp;&nbsp;За 3 года я успела поработать менеджером по заказам в компании Смарт Про, затем аналитиком в <a href='https://ameria.ru/' target='blank'>Америа Русс</a>, 
+			где научилась программе Excel, в том числе писать макросы, и <b>полюбила программирование</b>, и в <a href='https://svyaz.transneft.ru/' target='blank'>Связьтранснефти</a>, где занималась бюджетированием в ИТ департаменте. 
+			Параллельно изучала web программирование и как  <b>создавать сайты</b> с помощью CMS.
+			<br>&nbsp;&nbsp;&nbsp;За 3 года рабочий ритм города, масштабы, пробки и вся эта угнетающая суета настолько давили на меня, что я  <b>вернулась в Ереван</b>.
+			<br>&nbsp;&nbsp;&nbsp;<span class='arm'>Ընդունվեցի աշխատանքի <a href='https://www.ardshinbank.am/' target='blank'><img src="images/logo.png" style='height:37px; margin-bottom: -15px'><a>։ 
+			Սկզբում քարտային բաժին, հետո տեղափոխվեցի HR, այնուհետև IT, որտեղ զբաղվում էի ներքին քարտային  <b>համակարգի ծրագրավորումով</b>։ 5 տարի հետո տեղափոխվեցի		
+			<a href='https://www.ucom.am/' target='blank'><img src="images/ucom.png" style='height:65px; margin-bottom: -25px'><a>, որտեղ իմ աշխատանքի բնույթը միավորեց իմ հիմնական կրթության գիտելիքները և ինքնուս ձեռք բերած հմտությունները՝ վերլուծությունը և ծրագրավորումը։ 
+			Բայց ես իմ տեղում չեմ։ Ես <b>ուզում եմ զբաղվել ծրագրավորմամբ IT կազմակերպությունում</b>։ Եվ այս ինքնակենսագրությունը այդ ուղղությամբ իմ ձեռնարկած քայլի արդյունքն է։
 			
 			
 			</span>
@@ -79,37 +75,51 @@
 	<div id='goalsContent' class='Content'>
 
 		<p>	
-			Вопреки негативной ассоциации, которая бытует в армянском обществе, бабочка символ <b>Трансформации</b>. Причём трансформации грандиозной.
+			&nbsp;&nbsp;&nbsp;Вопреки негативной ассоциации, которая сложилась у большинства, бабочка символ <b>Трансформации</b>. Причём трансформации грандиозной.
 			Как неприглядное, умеющее только ползать, существо благодаря своей природной магии обретает сказочно красивые крылья и способность летать. 
-			Ведь гусеница даже не представляет, кем ей суждено стать. И в этом кроется вся уникальность бабочки.<br/>
-			В нас, в людях, тоже заложен огромный потенциал, который каждый должен в себе раскрыть. 
-			А сделать это можно только следуя своей природе, прислушиваясь к себе, бросая себе вызов, преодлевая трудности и развиваясь. 
-			И лишь тогда вырастут крылья.<br/>
-			Для меня нет ничего более увлекательного, чем учиться чему-то новому, познавать мир и себя. 
-			А помогают мне в этом книги и медитации. Вот, например, несколько расширяющих сознания книг, которые я прочла за последний год.
+			Ведь гусеница даже не представляет, кем ей суждено стать. И в этом кроется вся уникальность бабочки.
+			<br/>&nbsp;&nbsp;&nbsp;В нас, в людях, тоже заложен огромный потенциал, который каждый должен в себе раскрыть. 
+			А сделать это можно только следуя своей природе, прислушиваясь к себе, бросая себе вызов, преодолевая трудности и развиваясь. 
+			И лишь тогда "вырастут крылья".
+			<br/>&nbsp;&nbsp;&nbsp;Для меня нет ничего более увлекательного, чем учиться чему-то новому, экспериментировать, познавать мир и себя. 
+			А помогают мне в этом книги и медитации. 
+			<br/>&nbsp;&nbsp;&nbsp;Вот некоторые из расширяющих сознания книг, которые я прочла за последний год.
 		</p>
-		<img src="images/up-arrow.png" align="center" class="up-arrow" onclick='window.location.reload(true)'>
+		
+		<section id='books_sctn'>
+		
+			<img src="images/book_hormones.png" align="center" class="books">
+			<img src="images/book_flow.jpg" align="center" class="books">
+			<img src="images/book_placebo.png" align="center" id='book_placebo_img' class="books">
+			<img src="images/book_focus.png" align="center" class="books">
+			<img src="images/book_motivation.png" align="center" class="books">
+			<img src="images/book_growthmind.png" align="center" class="books">
+				
+		</section>
+		<img src="images/up-arrow.png" class="up-arrow" onclick='window.location.reload(true)'>
 	</div>
 
 	<div id='nutritionContent' class='Content'>
 		
 		<p>
-			И снова тут слово на букву Т. Да, питание - это тоже <b>трансформация</b>, вот только уже пищи в энергию. Но есть ещё один важный аспект. 
-			Помимо витаминов, минералов и микроэлементов необходимых для поддержания здоровья, любая пища имеет свою частоту вибрации, которая действует на сознание. 
-			Я много экспериментировала и в итоге исключила из своего рациона мясо, пшеничную муку и рафинированный сахар. 
-			Мясо имеет очень низкие вибрации, поэтому не может повышать уровень сознания.  А то, что якобы только в мясе содержатся незаменимые для организма аминокислоты, давным давно опровергнуто учёными. 
-			Вегетарианцы есть среди выдающихся философов, учёных, писателей и т.д.
-			Пшеничная мука и сахар вредны тем, что вызывают углеводную зависимость. То, что сродни с наркотиком, пользу нести не может. Вот и вся моя концепция о питании. 
-			А вот, что я ем, можно увидеть <a href='https://www.instagram.com/your.mindful.nutrition/' target='blank'>в моем профиле в Инстаграм</a>, куда я выкладываю то, что готовлю и делюсь рецептами.
+			&nbsp;&nbsp;&nbsp;И снова тут слово на букву Т. Да! Питание - это <b>трансформация</b> пищи в энергию. Но есть ещё один важный аспект. 
+			Помимо витаминов, минералов и микроэлементов необходимых для поддержания здоровья, любая пища имеет свою частоту вибрации, которая действует на сознание, а следовательно, и на ментальное здоровье. 
+			Я много экспериментировала и в итоге исключила из своего рациона мясо, пшеничную муку и рафинированный сахар.
+			<br/>&nbsp;&nbsp;&nbsp;Мясо имеет очень низкие вибрации, так как плоть животного хранит в себе информацию его смерти. То, что только в мясе содержатся незаменимые для организма аминокислоты, опровергнуто учёными. 
+			<br/>&nbsp;&nbsp;&nbsp;Пшеничная мука и сахар вредны тем, что вызывают углеводную зависимость. То, что сродни наркотику, пользу нести не может. Вот и вся моя концепция. 
+			<br/>&nbsp;&nbsp;&nbsp;Я придерживаюсь правильного питания и здорового образа жизни. И что я ем, можно увидеть в моём <a href='https://www.instagram.com/your.mindful.nutrition/' target='blank'><img src='images/Instagram2.png' style='width:30px;margin-bottom:-10px;'></a>, куда я выкладываю то, что готовлю и делюсь рецептами. Такое у меня хобби.
 		</p>
 		<img src="images/up-arrow.png" class="up-arrow" onclick='window.location.reload(true)'>
 	</div>
-
+	
+	
+	
 </div>
+
 <footer>
 	<div id='smi'>
+		<span> by Mary Bage </span>
 		<a href='https://www.facebook.com/mary.bage.14' target='blank'><img src='images/Facebook2.png'></a>
-		<a href='https://www.instagram.com/your.mindful.nutrition/' target='blank'><img src='images/Instagram2.png'></a>
 	</div>
 </footer>
 </body>
