--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<br>&nbsp;&nbsp;&nbsp;За 3 года я успела поработать менеджером по заказам в компании Смарт Про, затем аналитиком в <a href='https://ameria.ru/' target='blank'>Америа Русс</a>, 
 			где научилась программе Excel, в том числе писать макросы, и <b>полюбила программирование</b>, и в <a href='https://svyaz.transneft.ru/' target='blank'>Связьтранснефти</a>, где занималась бюджетированием в ИТ департаменте. 
 			Параллельно изучала web программирование и как  <b>создавать сайты</b> с помощью CMS.
-			<br>&nbsp;&nbsp;&nbsp;За 3 года рабочий ритм города, масштабы, пробки и вся эта угнетающая суета настолько давили на меня, что я  <b>вернулась в Ереван</b>.
+			<br>&nbsp;&nbsp;&nbsp;Рабочий ритм города, масштабы, пробки и вся эта угнетающая суета настолько давили на меня, что я  <b>вернулась в Ереван</b>.
 			<br>&nbsp;&nbsp;&nbsp;<span class='arm'>Ընդունվեցի աշխատանքի <a href='https://www.ardshinbank.am/' target='blank'><img src="images/logo.png" style='height:37px; margin-bottom: -15px'><a>։ 
 			Սկզբում քարտային բաժին, հետո տեղափոխվեցի HR, այնուհետև IT, որտեղ զբաղվում էի ներքին քարտային  <b>համակարգի ծրագրավորումով</b>։ 5 տարի հետո տեղափոխվեցի		
 			<a href='https://www.ucom.am/' target='blank'><img src="images/ucom.png" style='height:65px; margin-bottom: -25px'><a>, որտեղ իմ աշխատանքի բնույթը միավորեց իմ հիմնական կրթության գիտելիքները և ինքնուս ձեռք բերած հմտությունները՝ վերլուծությունը և ծրագրավորումը։ 
