--- a/slider/index.html
+++ b/slider/index.html
@@ -11,55 +11,21 @@
 <body>
 
 
-<div class="slideshow-container">
+<div id="slideshow-container">
 	<div class='slide fade'>
 		<img src="images/1.JPG" style="width:100%">
 		<div class='desctiption'>desctiption</div>
 	</div>
-	<div class='slide fade'>
-		<img src="images/amsterdam.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img src="images/berlin.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img src="images/brussels2.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div><div class='slide fade'>
-		<img src="images/lisbon.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	</div><div class='slide fade'>
-		<img src="images/london.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img src="images/madrid.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img src="images/milan1.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img  src="images/paris3.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<div class='slide fade'>
-		<img  src="images/vienna.JPG" style="width:100%">
-		<div class='desctiption'>desctiption</div>
-	</div>
-	<!--<a class='prev' onclick='pagingSlide(-1)'>&#10094;</a>
-	<a class='next' onclick='pagingSlide(1)'>&#10095;</a>-->
-	<a class='prev' onclick='pagingSlide(-1)'><img width='130px' src="images/plane.png"></a>
-	<a class='next' onclick='pagingSlide(1)'><img width='130px' src="images/plane.png"></a>
+	
+	<a class='prev' onclick='pagingSlide(-1)'>&#10094;</a>
+	<a class='next' onclick='pagingSlide(1)'>&#10095;</a>
+	<!--<a class='prev' onclick='pagingSlide(-1)'><img width='130px' src="images/plane.png"></a>
+	<a class='next' onclick='pagingSlide(1)'><img width='130px' src="images/plane.png"></a>-->
 </div> 
    
 <br>
 
-<div id='switchersDiv' style='text-align:center;'></div>  
+<div id='switchersDiv' style='text-align:center;z-index:1;'></div>  
   
 <script src='slider.js'></script>
 
