--- a/slider/index.html
+++ b/slider/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+<h1>She dreams to visit...</h1>
 
 <div id="slideshow-container">
 	<!--<div class='slide fade'>
@@ -18,7 +19,7 @@
 	</div>-->
 	
 	<a class='prev' onclick='pagingSlide(-2)'>&#10094;</a>
-	<a class='next' onclick='pagingSlide(1)'>&#10095;</a>
+	<a class='next' onclick='pagingSlide(0)'>&#10095;</a>
 	<!--<a class='prev' onclick='pagingSlide(-1)'><img width='130px' src="images/plane.png"></a>
 	<a class='next' onclick='pagingSlide(1)'><img width='130px' src="images/plane.png"></a>-->
 	<div id='switchersDiv' class='flex-container' style='text-align:center;z-index:1;'></div>  
