--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 		<p>	
 			&nbsp;&nbsp;&nbsp;Вопреки негативной ассоциации, которая сложилась у большинства, бабочка символ <b>Трансформации</b>. Причём трансформации грандиозной.
-			Как неприглядное, умеющее только ползать, существо благодаря своей природной магии обретает сказочно красивые крылья и способность летать. 
+			Как неприглядное, умеющее только ползать, существо, благодаря своей природной магии, обретает сказочно красивые крылья и способность летать. 
 			Ведь гусеница даже не представляет, кем ей суждено стать. И в этом кроется вся уникальность бабочки.
 			<br/>&nbsp;&nbsp;&nbsp;В нас, в людях, тоже заложен огромный потенциал, который каждый должен в себе раскрыть. 
 			А сделать это можно только следуя своей природе, прислушиваясь к себе, бросая себе вызов, преодолевая трудности и развиваясь. 
