--- a/astrology/index.html
+++ b/astrology/index.html
@@ -16,7 +16,7 @@
 		<h1>Что же может о тебе рассказать дата твоего рождения?</h1>
 	</div>
 </header>
-
+<!--testing comment-->
 
 <div id='date'>
 <div id='dateOfBirth'></div> 
