--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<br>&nbsp;&nbsp;&nbsp;<span class='arm'>Ընդունվեցի աշխատանքի <a href='https://www.ardshinbank.am/' target='blank'><img src="images/logo.png" style='height:37px; margin-bottom: -15px'><a>։ 
 			Սկզբում քարտային բաժին, հետո տեղափոխվեցի HR, այնուհետև IT, որտեղ զբաղվում էի ներքին քարտային  <b>համակարգի ծրագրավորումով</b>։ 5 տարի հետո տեղափոխվեցի		
 			<a href='https://www.ucom.am/' target='blank'><img src="images/ucom.png" style='height:65px; margin-bottom: -25px'><a>, որտեղ իմ աշխատանքի բնույթը միավորեց իմ հիմնական կրթության գիտելիքները և ինքնուս ձեռք բերած հմտությունները՝ վերլուծությունը և ծրագրավորումը։ 
-			Բայց ես <b>ուզում եմ զբաղվել ծրագրավորմամբ IT կազմակերպությունում</b>։ Եվ այս ինքնակենսագրությունը այդ ուղղությամբ իմ ձեռնարկած քայլի արդյունքն է։
+			Բայց ես <b>ուզում եմ զբաղվել ծրագրավորմամբ IT կազմակերպությունում</b>։ Եվ այս ինքնակենսագրությունը այդ ուղղությամբ ձեռնարկած քայլի արդյունքն է։
 			
 			
 			</span>
